objects/Meal_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <label>Cost Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_Meal_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Daily Meal Summary</label>
        <referenceTo>Daily_Meal_Summary__c</referenceTo>
        <relationshipLabel>Meal Transactions</relationshipLabel>
        <relationshipName>Meal_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meal_Type__c</fullName>
        <label>Meal Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Breakfast</fullName>
                </value>
                <value>
                    <fullName>Lunch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Student__c</referenceTo>
        <relationshipLabel>Meal Transactions</relationshipLabel>
        <relationshipName>Meal_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount_Rollup__c</fullName>
        <formula>IF(TEXT(Transaction_Type__c)=&apos;Credit&apos;,  Transaction_Amount__c, -  Transaction_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Amount Rollup</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <description>This is the amount the student is required to pay for their meal.</description>
        <inlineHelpText>This is the amount the student is required to pay for their meal.</inlineHelpText>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Transaction Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Void__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This should be checked if a transaction is voided.</description>
        <inlineHelpText>This should be checked if a transaction is voided.</inlineHelpText>
        <label>Void</label>
        <type>Checkbox</type>
    </fields>
    <label>Meal Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{0}</displayFormat>
        <label>Meal Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meal Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>